--- a/playground/templates/hello.html
+++ b/playground/templates/hello.html
@@ -12,9 +12,10 @@
     <h2>Hello World!!</h2>
 {% endif %}
 <ul>
-    {% for item in tag %}
-    	<li>{{ item }} </li>
-    {% endfor %}
+    {{ result }}
+{#    {% for item in tag %}#}
+{#    	<li>{{ item }} </li>#}
+{#    {% endfor %}#}
 
 </ul>
 </body>
